[package]
name = "enclone_paper"
version = "0.5.219"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
license-file = "../LICENSE.txt"
publish = false


# To keep compile time down, this file should *not* access the enclone crate.

[dependencies]
bio_edit.workspace = true
debruijn.workspace = true
enclone_core.workspace = true
enclone_tail = { path = "../enclone_tail" }
enclone_testlist = { path = "../enclone_testlist" }
flate2.workspace = true
io_utils.workspace = true
itertools.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
string_utils.workspace = true
tables.workspace = true
triple_accel.workspace = true
vdj_ann.workspace = true
vdj_ann_ref.workspace = true
vector_utils.workspace = true
