[package]
name = "enclone_server"
version = "0.5.56"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"

[[bin]]
name = "enclone_server"
path = "src/bin/enclone_server.rs"

[dependencies]
clap = "2.33"
enclone_main = { path = "../enclone_main" }
log = "0.4"
log4rs = "1.0"
prost = { version = ">=0.6.1, <0.8", features = [] }
tokio = { version = "1.6", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.4"

[build-dependencies]
tonic-build = { version = "0.4", features = [] }
