[package]
name = "enclone_server_proto"
version = "0.1.0"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = ">=0.6.1, <0.8"
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
