[package]
name = "enclone_tail"
version = "0.5.219"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
license-file = "LICENSE.txt"
publish = false
include = ["src/*.rs", "LICENSE.txt", "src/mammalian_fixed_len.table"]


# To keep compile time down, this file should *not* access the enclone crate.

[dependencies]
align_tools.workspace = true
amino.workspace = true
ansi_escape.workspace = true
bio_edit.workspace = true
crc.workspace = true
enclone_args.workspace = true
enclone_core.workspace = true
enclone_proto.workspace = true
enclone_process.workspace = true
enclone_vars.workspace = true
equiv.workspace = true
expr_tools.workspace = true
float-ord.workspace = true
fontdb.workspace = true
io_utils.workspace = true
itertools.workspace = true
lazy_static.workspace = true
ndarray.workspace = true
permutation.workspace = true
palette.workspace = true
plotters.workspace = true
rayon.workspace = true
regex.workspace = true
resvg.workspace = true
serde_json.workspace = true
stats_utils.workspace = true
string_utils.workspace = true
superslice.workspace = true
tables.workspace = true
tar.workspace = true
tiny-skia.workspace = true
triple_accel.workspace = true
usvg.workspace = true
vdj_ann.workspace = true
vector_utils.workspace = true
enclone_help = { path = "../enclone_help" }
enclone_build = { path = "../enclone_build" }

hdf5.workspace = true
