[package]
name = "enclone_versions"
version = "0.5.108"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
license-file = "../LICENSE.txt"
publish = false

[dependencies]
assert_cmd = "1"
byteorder = "1"
bytes = "1"
dirs = "3"
failure = "0.1"
flate2 = "1"
io_utils = "0.2"
itertools = "0.10"
ndarray = ">=0.14, <0.16"
pager = "0.16"
permutation = "0.2"
petgraph = "0.5"
pretty_trace = "0.5"
prost = { version = "0.8", default_features = false }
prost-build = "0.8"
rayon = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = "1"
serde_derive = "1"
stats_utils = "0.1"
stirling_numbers = "0.1"
string_utils = "0.1"
tar = "0.4"
tilde-expand = "0.1"
vector_utils = "0.1"


