[package]
name = "enclone_versions"
version = "0.5.182"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
license-file = "LICENSE.txt"
publish = false

[dependencies]
assert_cmd = "2"
byteorder = "1"
bytes = "1"
dirs = "4"
flate2 = "1"
io_utils = { version = "0.3", git = "https://github.com/10XGenomics/rust-toolbox.git", branch = "master" }
itertools = "0.10"
ndarray = "0.15"
permutation = "0.4"
petgraph = "0.6"
pretty_trace = { version = "0.5", git = "https://github.com/10XGenomics/rust-toolbox.git", branch = "master" }
prost = { version = "0.9", default_features = false, features = ["std", "prost-derive"] }
prost-build = "0.9"
rayon = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = "1"
serde_derive = "1"
stats_utils = { version = "0.1", git = "https://github.com/10XGenomics/rust-toolbox.git", branch = "master" }
stirling_numbers = { version = "0.1", git = "https://github.com/10XGenomics/rust-toolbox.git", branch = "master" }
string_utils = { version = "0.1", git = "https://github.com/10XGenomics/rust-toolbox.git", branch = "master" }
tar = "0.4"
vector_utils = { version = "0.1", git = "https://github.com/10XGenomics/rust-toolbox.git", branch = "master" }

[target.'cfg(not(windows))'.dependencies]
pager = "0.16"
