[package]
name = "canvas_in_scrollable"
version = "0.0.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "e68da229b384fbe78514dab0b13c8eb4637f4f5d", features = ["canvas", "tokio", "wgpu", "default_system_font", "default", "async-std"] }
iced_native = { git = "https://github.com/hecrj/iced", rev = "e68da229b384fbe78514dab0b13c8eb4637f4f5d" }

[profile.dev]
debug = 1
opt-level = 3

[[bin]]
name = "canvas_in_scrollable"
path = "src/main.rs"
